added small text at bottom of page

--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 text-center">
-                <p class="text-gray-400">© 2025 TechPrint Studio. All rights reserved.</p>
+                <p>© 2025 TechPrint Studio. All rights reserved.</p>
+                <p class="text-gray-400">Built with HTML, TailwindCSS, JavaScript, and ❤️</p>
             </div>
         </div>
     </footer>
